More tweaking, changed css for map popup, popup input from button to text element, fixed CSS spacing on save button

--- a/static/style/buttons.css
+++ b/static/style/buttons.css
@@ -25,9 +25,9 @@
 
 .btn-sign {
 	width: 80px;
-    height: 35px;
+  height: 35px;
 	margin-bottom:10px;
-    background: #d3d3d3;
+  background: #d3d3d3;
 }
 
 .btn-sign:hover {
@@ -38,6 +38,6 @@
   color:#2f4f4f;
 	width: 100%;
 	height: 100%;
-	margin: auto;
-	padding: 7px 14px;
+	margin: 0;
+	padding: 12px 18px;
 }
